# rym

./: .clang-format  .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  Makefile.win  Matmakefile  README.md  _inf.txt  bitmap.cpp  bitmap.h  broadphase.cppm  broadphase.h  build.mm3  comet.cppm  common.h  draw-gl1.cpp  draw.cpp  draw.cppm  draw.h  explosion.cppm  glfunctions.h  graf.cpp  graf.cppm  graf.h  hant.cpp  hant.cppm  hant.h  index.html  linesmoke.cppm  main-nix.cpp  main-win.cpp  main.cpp  maintub.cpp  matgl.h  non-module-build.sh  obj.cppm  (+20 more)
.github/workflows/: c-cpp.yml  gcc.yml  modules.yml
src/: broadphase.cppm  comet.cppm  common.cppm  draw-gl1.cpp  draw-gl1.cpp.unused  draw.cppm  draw_impl.cpp  explosion.cppm  eye.cppm  glapi.cppm  glfunctions.h  graf.cppm  hant.cppm  linesmoke.cppm  main-nix.cpp  main-win.cpp  main-win.cpp-unused  matgl.cppm  matgl.h  obj.cppm  particle.cppm  projectile.cppm  roamingbroadphase.cppm  rym_private.h  shaderprogram.cppm  shaderprogram_impl.cpp  ship.cppm  star.cppm  unit.cppm  vec.cppm  vektorer.h
